added some more changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,19 +62,19 @@
                     <a href="#" class=".main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
@@ -377,7 +377,6 @@
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -461,7 +460,7 @@
             <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
         
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="../index.html" style="color: #fff; background-color: #0092ff">Contact Us</a></li>
