--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -71,19 +71,19 @@
                     >
                     <ul class="services-list">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
@@ -130,10 +130,8 @@
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -264,12 +262,17 @@
               <div class="widget-content">
                 <h6>Services List</h6>
                 <ul class="service-list-tab">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -337,12 +340,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -411,7 +419,12 @@
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a
+            id="toggle-service"
+            href="#"
+            style="color: #fff; background-color: #0092ff"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
             <li>
               <a href="./websitedev.html" data-page="Service1"
@@ -424,18 +437,22 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-            <li><a href="./maintenance.html" style="color: #fff; background-color: #0092ff">Maintenance and Support</a></li>
+            <li>
+              <a
+                href="./maintenance.html"
+                style="color: #fff; background-color: #0092ff"
+                >Maintenance and Support</a
+              >
+            </li>
             <li><a href="./advisory.html">Advisory</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
-        
+        <li><a href="./careers.html">Career</a></li>
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
