--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -130,13 +130,9 @@
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  <li>
-                    <a href="./projects.html" class=".main-a">Projects</a>
-                  </li>
+                  
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -372,6 +368,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -439,12 +437,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -542,9 +545,11 @@
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
 
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
