--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -128,7 +128,7 @@
                     </ul>
                   </li>
 
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
                   <li>
                     <a
                       id="About-us"
@@ -536,7 +536,7 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./careers.html">Career</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -620,7 +620,7 @@
             <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
 
         <li>
           <a
