--- a/pages/erppage.html
+++ b/pages/erppage.html
@@ -130,10 +130,8 @@
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  
+                  <li><a href="./careers.html" class=".main-a">Career</a></li>
                   
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
@@ -418,7 +416,7 @@
                   <li><a href="../index.html">Home</a></li>
                   <!-- <li><a href="../index.html">Services</a></li> -->
                   <!-- <li><a href="../index.html">Technologies</a></li> -->
-                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./careers.html">Career</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -510,7 +508,7 @@
             <li><a href="./branding.html">Brandung</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./careers.html">Career</a></li>
 
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
