--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./pages/careers.html" id="Careers-link">Careers</a>
+                    <a href="./pages/careers.html" id="Careers-link">Career</a>
                   </li>
 
                   <li>
@@ -1061,8 +1061,7 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./pages/careers.html">Careers</a></li>
-                  <li><a href="./pages/projects.html">Projects</a></li>
+                  <li><a href="./pages/careers.html">Career</a></li>
                   <li>
                     <a id="About-us" href="./pages/aboutus.html">About Us</a>
                   </li>
