added images for service pages

--- a/pages/appdev.html
+++ b/pages/appdev.html
@@ -42,7 +42,7 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy | Advisory</title>
+    <title>SciPy | App Development</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
@@ -130,7 +130,7 @@
                       </li>
                     </ul>
                   </li>
-                  
+
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
@@ -154,7 +154,12 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://img.freepik.com/free-vector/mobile-app-development-composition-with-flowchart-isometric-platforms-application-icons-human-characters-text-captions-vector-illustration_1284-77306.jpg?w=996&t=st=1699190201~exp=1699190801~hmac=5514c73b45eb26538c04ec4aa0ce18a8e924fb0b7cd3002ebf37e2a2206961b2');
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -195,58 +200,159 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-vector/app-development-illustration_52683-47931.jpg?w=826&t=st=1699190228~exp=1699190828~hmac=45af17199ba8acc4f22da540e047e4b9da90a95e9c38c86e5e50a3977c9af72f"
                 alt=""
               />
               <div class="lower-content">
-                <h3>Advisory</h3>
+                <h3>
+                  Unlock the Potential of Native App Development with SciPy
+                  Technologies
+                </h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interative web and mobile solution We are effective in
-                  next generation enterprise application on the web,Mobile and
-                  desktop to modernized business process and enhance customes
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the market
+                  In a mobile-driven world, the development of native
+                  applications is a vital component of digital success. [Your IT
+                  Company] specializes in crafting native mobile apps that
+                  provide an exceptional user experience, seamless
+                  functionality, and a strong market presence.
                 </p>
+                <h6>Why Choose Native App Development ?</h6>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenge in
-                  business. We provide you
-                  secure,intractive,responive,elagant,sleek and fully customized
-                  UI/UX
+                  Native app development is the process of creating applications
+                  that are specifically designed to run on a particular
+                  operating system, such as iOS (Apple) or Android (Google).
+                  Here's why native app development is a smart choice for your
+                  business:
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
+                <ol>
+                  <li>
+                    <p>
+                      <b>Performance :</b> Native apps are optimized for the
+                      specific platform they run on, resulting in faster load
+                      times and superior performance.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>User Experience :</b> Native apps offer a highly
+                      responsive and intuitive user experience, enhancing
+                      customer satisfaction and engagement.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Access to Device Features :</b> Developers can tap into
+                      a device's full range of features, such as camera, GPS,
+                      and push notifications, for a richer and more interactive
+                      experience.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Offline Functionality :</b> Native apps can provide
+                      limited functionality even when offline, ensuring
+                      uninterrupted service for users.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Security :</b> Native apps typically have a higher
+                      level of security, protecting both user data and your
+                      brand's reputation.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>App Store Presence :</b> By launching native apps on
+                      popular app stores like the Apple App Store and Google
+                      Play Store, you can reach a vast audience.
+                    </p>
+                  </li>
+                </ol>
+                <h6>Our Native App Development Services</h6>
                 <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                  At SciPy Technologies, we're passionate about building native
+                  mobile applications that meet your business objectives. Our
+                  team of skilled developers is well-versed in:
                 </p>
+                <ol>
+                  <li>
+                    <p>
+                      <b>IOS App Development :</b> We create native apps for
+                      iPhones and iPads, ensuring they meet Apple's stringent
+                      quality and performance standards.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Android App Development :</b> Our developers craft
+                      native apps for Android devices, delivering an exceptional
+                      user experience on a wide range of smartphones and
+                      tablets.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>IOS App Development :</b> We create native apps for
+                      iPhones and iPads, ensuring they meet Apple's stringent
+                      quality and performance standards.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>Cross-Platform Development :</b> We also offer
+                      cross-platform app development solutions that allow you to
+                      reach both iOS and Android users with a single codebase.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>UI/UX Design :</b> Our design team creates user
+                      interfaces that are not only visually appealing but also
+                      user-friendly, maximizing user engagement and
+                      satisfaction.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>App Store Submission :</b> We handle the entire
+                      submission process to the Apple App Store and Google Play
+                      Store, ensuring your app meets their guidelines and is
+                      readily accessible to your target audience.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <b>App Maintenance Updates :</b> We provide ongoing
+                      support to keep your app up-to-date, secure, and
+                      compatible with the latest devices and operating systems.
+                    </p>
+                  </li>
+                </ol>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
+                      style="border-radius: 30px"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://img.freepik.com/free-vector/app-development-concept-illustration_114360-5110.jpg?w=826&t=st=1699190259~exp=1699190859~hmac=489fe3838bdd9acf4c1f63b2e929fea6ab7ad0dc09246bae97b6a2ea26ee41ab"
                       alt=""
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>Get in Touch</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Ready to take your brand to the next level with a native
+                      mobile app? Contact SciPy Technologies today to discuss
+                      your project and how we can turn your vision into a
+                      user-friendly, high-performance reality. We're here to
+                      help you harness the full potential of mobile technology
+                      and reach a broader audience with a tailored native app.
+                      Your success is our priority.
                     </p>
-                    <ul class="service-list-content">
+                    <!-- <ul class="service-list-content">
                       <li>One-time security check fee: $99.95</li>
                       <li>One-time security check fee: $99.95</li>
                       <li>One-time security check fee: $99.95</li>
-                    </ul>
+                    </ul> -->
                   </div>
                 </div>
               </div>
