--- a/pages/branding.html
+++ b/pages/branding.html
@@ -42,7 +42,7 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy | Advisory</title>
+    <title> SciPy | Branding </title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
@@ -71,19 +71,19 @@
                     >
                     <ul class="services-list">
                       <li>
-                        <a href="./pages/websitedev.html"
+                        <a href="./websitedev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Website Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/digitalmarket.html"
+                        <a href="./digitalmarket.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Digital Marketing</span></a
                         >
                       </li>
                       <li>
-                        <a href="./pages/erppage.html"
+                        <a href="./erppage.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">ERP Solutions</span></a
                         >
@@ -154,7 +154,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('https://img.freepik.com/free-vector/branding-concept-landing-page_52683-12361.jpg?w=826&t=st=1699191597~exp=1699192197~hmac=b51d430919f732556664b938f9dee96dd0dae647c3a67d4f5e701c239b2e1382');">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -180,10 +180,10 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Advisory</h1>
+              <h1 class="title-abt">Branding</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Advisory</p></li>
+                <li><p class="page-about">Branding</p></li>
               </ul>
             </div>
           </div>
@@ -195,11 +195,11 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-photo/branding-copyright-design-spaceship-graphic-concept_53876-120958.jpg?w=826&t=st=1699191507~exp=1699192107~hmac=06376648eeaa5e0486aa348d0a60344f9c19769da9e06391967d8235b65959c9"
                 alt=""
               />
               <div class="lower-content">
-                <h3>Advisory</h3>
+                <h3>Branding</h3>
                 <p>
                   We provide expert and unique Software Development Service for
                   the needs that are specifically fro industrial trens and
@@ -226,10 +226,11 @@
                   rutrum lectus vel est pulvinar in scelerisque purus.
                 </p>
                 <div class="lower-content-row">
-                  <div class="lower-content-col">
+                  <div class="lower-content-col" style="width: 370px !important; height: 370px !important;">
                     <img
+                      style="border-radius: 30px;"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://img.freepik.com/free-photo/marketing-branding-creativity-business-values_53876-120185.jpg?w=1060&t=st=1699191314~exp=1699191914~hmac=772ed5d5c0eb6081ed1f65bb69285c4cad9e1ee8b6b00c1453f5840c4a5c60c5"
                       alt=""
                     />
                   </div>
