--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -154,7 +154,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041850.jpg?w=740&t=st=1699189740~exp=1699190340~hmac=77f07bc0325f3eb1f06c36d0ed977e384ca4f35cda4518abd0bb018296026f87');">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -195,7 +195,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-vector/technical-support-guys-working-repairing-computer-hardware-software-troubleshooting-fixing-problems-problem-checking-concept_335657-1838.jpg?w=826&t=st=1699189817~exp=1699190417~hmac=6093a3f18b3b96fa5543eca1e82ad5959e32605fb4da1c4ac85e06f472184d28"
                 alt=""
               />
               <div class="lower-content">
@@ -228,8 +228,9 @@
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
+                    style="border-radius: 30px;"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://img.freepik.com/free-vector/settings-concept-illustration_114360-4157.jpg?w=740&t=st=1699189862~exp=1699190462~hmac=cc036cbbf71614a55aa0357fd295b616014df3266fa0cf83e0e03c3915597c5d"
                       alt=""
                     />
                   </div>
